# discbot

./: --full-page  .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  IMPROVEMENT_PLAN.md  OPTIMIZATION_REPORT.md  PORTS.md  RAILWAY_SETUP.md  README.md  START_STOP.md  application.yml.example  docker-compose.yml  docker-entrypoint.sh  implementation_plan.md  index.html  install.bat  pyproject.toml  railway.json  requirements.txt  setup.py  skills-lock.json  start.bat  start.bat.bak  start_all.bat  start_bot.bat  start_bot.sh  start_dashboard.bat  start_dashboard.sh  start_discbot.bat  start_lavalink.bat  start_lavalink.sh  stop_all.bat  test_lavalink_url.py  update.sh  ytcookies.txt
.codex/environments/: environment.toml
.codex/landing-dashboard-x20zkdk5.qoj/: brief.md
.github/workflows/: deploy.yml  test.yml
bot/: __init__.py  config.py  main.py
bot/cogs/: admin_commands.py  events.py  music_commands.py
bot/cogs/admin/: __init__.py  base.py  blacklist.py  misc.py  requests.py  whitelist.py
bot/cogs/chat/: __init__.py  base.py  commands.py
bot/cogs/music/: __init__.py  base.py  filters.py  library.py  playback.py  queue_cmds.py  utility.py
bot/core/: bot.py  errors.py  logging_setup.py
bot/core/services/: __init__.py  ai_service.py  auth.py  playback.py  voice.py
bot/dashboard/: dashboard-skills.md  dashboard.py  routes.py  ws_manager.py
bot/dashboard/templates/: index.html  landing.html
bot/database/: __init__.py  database.py  favorites_manager.py  guild_settings.py  history_manager.py  playlist_manager.py  postgres.py  repository.py
bot/database/playlists/: __init__.py  crud.py  tracks.py
bot/landing/: server.py
bot/music/: audio_filters.py  embed_manager.py  emoji.py  help_views.py  lavalink_client.py  player.py  player_controller.py  player_message.py  player_view.py  queue_manager.py  search.py  views.py
bot/music/embeds/: __init__.py  common.py  filters.py  help.py  library.py  player.py  queue.py  search.py
bot/music/help/: __init__.py  categories.py  embeds.py  views.py
bot/music/lavalink/: __init__.py  client.py  events.py
bot/music/player_message/: __init__.py  manager.py  persistence.py  state.py
bot/music/player_ui/: __init__.py  filter_select.py  view.py
docker/lavalink/: application.yml
docs/: DESIGN_SYSTEM.md  HOSTINGER_VPS_INSTALL.md  PROJECT_PLAN.md  index.html  reference-nightmare-bots.html
docs/assets/: README.md
lavalink/: application.yml  run_lavalink.bat
scripts/: install.sh  update.sh
scripts/deploy/: railway.sh
scripts/windows/: DiscBot.iss  README-windows.md  install.ps1  setup.bat  start.bat  start.bat.bak  start.ps1  stop.bat  stop.ps1  update.bat  update.ps1
tests/: __init__.py  conftest.py  test_ai_service.py  test_chat_commands_e2e.py  test_chat_commands_integration.py  test_dashboard_routes.py  test_database.py  test_queue_manager.py  test_search_helpers.py
web/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
web/src/: index.css  main.tsx  router.tsx
(+77 files in other folders)
