[project]
name = "discbot"
version = "2.0.0"
description = "Discord Music Bot with Lavalink, FastAPI Dashboard, and SQLite/PostgreSQL"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.4.0",
    "wavelink>=3.0.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "yarl>=1.9.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "black>=24.3.0",
    "pyright>=1.1.380",
    "rich>=13.7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["*Tests"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --strict-markers"

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # function calls in default argument
    "SIM103", # return bool(...) instead of ...
]
fixable = ["ALL"]
unfixable = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.black]
line-length = 100
target-version = ["py311"]
include = "\\.pyi?$"
extend-exclude = """
/(
  # directories
  \\.venv
  | \\.git
  | __pycache__
  | \\.pytest_cache
  | build
  | dist
)/
"""

[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "Windows"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUnusedImport = true
reportUnusedVariable = true
reportUnusedFunction = true
reportDuplicateImport = true
reportUnnecessaryComparison = true
reportUnnecessaryIsInstance = true
reportUnnecessaryCast = true
# Relax checks for external libs without stubs (wavelink) and discord.py dynamic attrs
reportMissingImports = false
reportAttributeAccessIssue = false
reportOptionalMemberAccess = false
reportOptionalSubscript = false
include = ["bot", "tests", "setup.py"]
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    ".pytest_cache",
    "build",
    "dist",
    "lavalink",
    "data",
    "logs",
]

[tool.coverage.run]
source = ["bot"]
omit = ["tests/*", "setup.py", "lavalink/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]